--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1718,7 +1718,7 @@ tr>td.tdright {
 }
 tr>td.tdright .layui-input,tr>td.tdright .layui-select,tr>td.tdright .layui-textarea ,tr>td.tdright>.xm-select{
     width: 320px;
-    background: #f5f7bb;
+    /*background: #f5f7bb;*/
     display: inline;
     /*background: #ffffff;*/
 }
