--- a/application/admin/view/user/group/index.html
+++ b/application/admin/view/user/group/index.html
@@ -6,7 +6,7 @@
         <div class="layui-col-md12 webody">
             <div class="layui-card">
                 <div class="layui-card-body">
-                    <table class="layui-hide" id="group"  lay-filter="group" table-reload-id="tableReload"></table>
+                    <table class="layui-hide" id="groupList"  lay-filter="groupList" table-reload-id="tableReload"></table>
                 </div>
             </div>
         </div>
@@ -14,8 +14,14 @@
 </div>
 </div>
 <!--工具栏-->
-{:build_toolbar('toolbar','refresh,add')}
+<!--{:build_toolbar('toolbar','refresh,add')}-->
 <!--工具栏-->
+
+<!------------------------表格头工具栏begin------------------------->
+<script type="text/html" id="toolbar">
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="addGroup"><i class="fa fa-plus"></i> 创建分组</a>
+</script>
+<!-------------------------表格头工具栏end---------------------------->
 
 <!--状态-->
 <script type="text/html" id="switchStatus">
@@ -55,7 +61,7 @@
             ,we = layui.we;
         layer.load(0, {shade: false});
         table.render({
-            elem: '#group'
+            elem: '#groupList'
             ,skin:'line'
             ,toolbar: '#toolbar'
             ,url:"{:url('Admin/user.group/index')}"
@@ -81,19 +87,34 @@
         /**
          * 表格初始化
          */
-        weTable.api.init({
+        /*weTable.api.init({
             table : "group",
             tableid : "tableReload",
             extend : {
                 "add_url": "{:url('admin/user.group/edit','',false)}",
                 "edit_url": "{:url('admin/user.group/edit','',false)}/ids/",
             }
-        });
+        });*/
 
         /**
          * 绑定监听事件
          * */
-        weTable.api.bindevent();
+        //weTable.api.bindevent();
+
+        //表头工具栏事件
+        table.on('toolbar(groupList)', function(obj){
+            var checkStatus = table.checkStatus(obj.config.id);
+            var data = checkStatus.data;
+            var idsArr = [];
+            console.log(data);
+            $.each(data,function (index, value) {
+                idsArr.push(value.id);
+            });
+            if(obj.event == 'addGroup') {
+                layer_index1 = we.api.open("{:url('admin/user.group/edit')}",'创建分组',{zIndex:19891016
+                },['80%' , '80%']);
+            }
+        })
     });
 
 </script>
