--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -309,8 +309,8 @@
 
 <!----------------------------短信模板操作栏begin-------------------------->
 <script type="text/html" id="actionbar">
-    <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="use_sms_module">使用</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del_sms_module">删除</a>
+    <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <!------------------------------短信模板操作栏end--------------------------->
 
