--- a/application/admin/view/user/group/edit.html
+++ b/application/admin/view/user/group/edit.html
@@ -1,8 +1,6 @@
 {extend name="layout/default2" /}
 {block name="content"}
 <body>
-<!--<div class="layui-container lay_top">-->
-<!--<div class="layui-row layui-col-space30">-->
 <div class="body-form main-table">
     <form class="layui-form" action="" id="rule" lay-filter="rule">
         <input type="hidden" name="ids"  value="{$list['id']}" class="layui-input">
@@ -151,130 +149,13 @@
         version:true,
     }).extend({
         index: 'lib/index' //主入口模块
-        ,authtree: 'authtree',
-//        ,jstree: 'jstree/dist/jstree'
-//    .link("__STATIC__/modules/jstree/dist/themes/default/style.css")
-    }).use(['jquery','index','form','element','layer','authtree','we'], function(){
+    }).use(['jquery','index','form','element','layer','we'], function(){
         var admin = layui.admin
             ,$ = layui.$ //重点处
             ,form = layui.form
             ,table = layui.table
             ,layer = layui.layer
-            ,we = layui.we
-            ,authtree = layui.authtree;
-
-        var authids = authtree.getChecked('#LAY-auth-tree-index');
-        //监听提交
-        form.on('submit(formRule)', function(data){
-            var formData = data.field;
-            var ids = "{$list['id']}";
-            var url = "{:url('admin/user.group/edit','',false)}/ids/" + ids;
-            formData['rules'] = authids.join(',');
-            we.api.ajax({"url":url,"data":formData,'tableid':'tableReload'});
-        });
-        var id = "{$list['id']}";
-//        var pid = "{$row['pid']}" ? "{$row['pid']}" : 1;
-
-        // 初始化
-        $.ajax({
-            url: "{:url('admin/user.group/roletree')}",
-            dataType: 'json',
-            "data":{'ids':id},
-            "type":'post',
-            success: function(data){
-                // 渲染时传入渲染目标ID，树形结构数据（具体结构看样例，checked表示默认选中），以及input表单的名字
-                authtree.render('#LAY-auth-tree-index', data.data.trees, {
-                    inputname: 'authids[]',
-                    layfilter: 'lay-check-auth',
-                    // openall: true,
-                    autowidth: true,
-                });
-                // 使用 authtree.on() 不会有冒泡延迟
-                authtree.on('change(lay-check-auth)', function(data) {
-                    console.log('监听 authtree 触发事件数据', data);
-                    // 获取所有节点
-                    var all = authtree.getAll('#LAY-auth-tree-index');
-                    console.log('all', all);
-                    // 获取所有已选中节点
-                    var checked = authtree.getChecked('#LAY-auth-tree-index');
-                    console.log('checked', checked);
-                    // 获取所有未选中节点
-                    var notchecked = authtree.getNotChecked('#LAY-auth-tree-index');
-                    console.log('notchecked', notchecked);
-                    // 获取选中的叶子节点
-                    var leaf = authtree.getLeaf('#LAY-auth-tree-index');
-                    console.log('leaf', leaf);
-                    // 获取最新选中
-                    var lastChecked = authtree.getLastChecked('#LAY-auth-tree-index');
-                    console.log('lastChecked', lastChecked);
-                    // 获取最新取消
-                    var lastNotChecked = authtree.getLastNotChecked('#LAY-auth-tree-index');
-                    console.log('lastNotChecked', lastNotChecked);
-
-                });
-                authtree.on('deptChange(lay-check-auth)', function(data) {
-                    console.log('监听到显示层数改变',data);
-                });
-
-            }
-        });
-
-        /**
-         * 全选
-         * */
-        form.on('checkbox(checkall)', function(data){
-            if(data.elem.checked) {
-                authtree.checkAll("#LAY-auth-tree-index");
-            } else {
-                authtree.uncheckAll("#LAY-auth-tree-index");
-            }
-        });
-
-        /**
-         * 全部展开
-         * */
-        form.on('checkbox(expandall)', function(data){
-            if(data.elem.checked) {
-                authtree.showAll("#LAY-auth-tree-index");
-            } else {
-                authtree.closeAll("#LAY-auth-tree-index");
-            }
-        });
-
-        /**
-         * 监听select选择
-         */
-        form.on('select(character)', function(data){
-            console.log(data.elem);
-            console.log(data.value); //得到被选中的值
-            console.log(data.othis.data("pid"));
-            $.ajax({
-                url: "{:url('admin/user.group/roletree')}",
-                type: 'post',
-                dataType: 'json',
-                async:true,
-                data: {id: id, pid: data.value},
-                success: function (ret) {
-                    if (ret.code == 1) {
-                        $("#LAY-auth-tree-index").html('');
-                        //销毁已有的节点树
-                        authtree.render('#LAY-auth-tree-index', ret.data.trees, {
-                            inputname: 'authids[]',
-                            layfilter: 'lay-check-auth',
-                            // openall: true,
-                            autowidth: true,
-                        });
-                    } else {
-                        layer.tips(ret.data);
-                    }
-                }, error: function (e) {
-                    layer.tips(e.message);
-                }
-            });
-
-        });
-
-
+            ,we = layui.we;
     });
 </script>
 </body>
