--- a/application/admin/view/user/group/index.html
+++ b/application/admin/view/user/group/index.html
@@ -41,10 +41,10 @@
 </script>
 
 <!--操作-->
-<script type="text/html" id="barDemo">
-    {{# if(d.rules != '*'){  }}
+<script type="text/html" id="tableTool">
+    <!--{{# if(d.rules != '*'){  }}-->
     <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>{:__('Edit')}</a>
-    {{# }  }}
+    <!--{{# }  }}-->
 </script>
 <!--操作-->
 
@@ -90,7 +90,7 @@
                 ,{field:'groupSource', title: "分组类型", searchList:{type:'select',data:{"0":"全部分组","1":"系统分组","2":"标签分组","3":"我的分组"},'operate':'='}, sort: true}
                 ,{field:'remarks', title: "分组备注"}
                 ,{field:'creatime', title: "创建时间", searchList:{type:'input',event:'date',operate: 'RANGE'}}
-                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#barDemo', width:200}
+                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#tableTool', width:200}
             ]]
             ,done: function(res, curr, count){
                 if(res.status == 'success') {
@@ -134,6 +134,9 @@
                 },['80%' , '80%']);
             }
         })
+
+
+
     });
 
 </script>
