导入黑名单

--- a/application/admin/view/user/user/edit.html
+++ b/application/admin/view/user/user/edit.html
@@ -22,6 +22,7 @@
                 <td class="tdleft">姓名</td>
                 <td class="tdright">
                     <input type="text" data-rule="required" name="userName" placeholder="" value="{$list['userName']}" autocomplete="off" class="layui-input">
+                    <!--<span class="red_color">多个号码请使用回车分隔，重复号码会被过滤。</span>-->
                 </td>
             </tr>
             <tr>
