--- a/application/admin/view/user/user/import.html
+++ b/application/admin/view/user/user/import.html
@@ -14,14 +14,14 @@
                     <!--<p>【重要提示】根据淘宝要求，超过7天未登录软件将停止订单数据推送，会导致订单中心不能正常发送催付物流短信，数据查询出现误差等问题，为确保功能正常使用，请务必每个店铺每周至少登录1次软件。</p>-->
                     <div class="layui-upload">
                         <button type="button" class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" id="upload">
-                            <i class="layui-icon">&#xe654;</i>添加文件(允许上传格式：xlsx、xls)
+                            <i class="fa fa-plus"></i>添加文件(允许上传格式：xlsx、xls)
                         </button>
-                        <button type="button"  class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" id="testListAction"><i class="layui-icon">&#xe67c;</i>开始上传</button>
+                        <button type="button"  class="marginlef10 layui-btn layui-btn-sm layui-btn-primary btn-primary-border" id="testListAction"><i class="fa fa-cloud-upload" aria-hidden="true"></i>开始上传</button>
                         <button type="button" class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" id="import">
-                            <i class="layui-icon">&#xe653;</i>导入
+                            <i class="fa fa-file-code-o" aria-hidden="true"></i>导入
                         </button>
                         <button type="button" class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" id="downloadTemplate">
-                            <i class="fa fa-arrow-down"></i>下载模板
+                            <i class="fa fa-cloud-download" aria-hidden="true"></i>下载模板
                         </button>
                         <input type="hidden" name="filepath" id="filepath" value="" class="layui-input">
 
