--- a/application/admin/view/user/user/black_member.html
+++ b/application/admin/view/user/user/black_member.html
@@ -299,18 +299,15 @@
 
 <!------------------------表格头工具栏begin------------------------->
 <script type="text/html" id="toolbar">
-    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="addBlack"><i class="fa fa-plus"></i> 加入黑名单</a>
-    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="sendSearchResultSms"><i class="fa fa-envelope-o"></i> 选择会员发送短信</a>
-    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="addMember"><i class="fa fa-plus"></i> 新增联系人</a>
-    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="importMemberInfo"><i class="fa fa-file-text-o"></i> 导入会员信息</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="addBlackMember"><i class="fa fa-plus"></i> 添加黑名单</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="importBlackMember"><i class="fa fa-arrow-up" aria-hidden="true"></i> 导入黑名单</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border-red" lay-event="delete"><i class="fa fa-trash" aria-hidden="true"></i> 删除</a>
 </script>
 <!-------------------------表格头工具栏end---------------------------->
 
 
 <!----------------------------短信模板操作栏begin-------------------------->
 <script type="text/html" id="actionbar">
-    <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="sendSms">发送短信</a>
-    <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del">删除</a>
 </script>
 <!------------------------------短信模板操作栏end--------------------------->
@@ -378,14 +375,9 @@
                 {type:'checkbox', fixed: 'left',}
                 ,{field:'id', title: 'ID', sort: true, excel_width:15,hide:false}
                 ,{field:'yxName', title: "云信昵称", sort: true, excel_width:15, searchList:{type:'input',operate:'LIKE'}, minWidth: 120}
-                ,{field:'userName', title: "姓名", excel_width:15, searchList:{type:'input',operate:'LIKE'}, minWidth: 120}
-                ,{field:'tradeAmount', title: "交易金额", excel_width:15, minWidth: 120}
-                ,{field:'tradeCount', title: "交易笔数", excel_width:15, minWidth: 120}
-                ,{field:'memberLevel', title: "会员等级", excel_width:15, minWidth: 120}
-                ,{field:'area', title: "区域", excel_width:15, searchList:{type:'select',data:{"北京":"北京","天津":"天津","上海":"上海"},'operate':'='}, minWidth: 120}
                 ,{field:'phone', title: "手机号", excel_width:15, searchList:{type:'input',operate:'LIKE'}, minWidth: 130}
-                ,{field:'email', title: "邮箱", excel_width:15, minWidth: 120}
-                ,{field:'lastTradingTime', title: "最后交易时间", excel_width:15, minWidth: 140}
+                ,{field:'remarks', title: "备注", excel_width:15, minWidth: 120}
+                ,{field:'lastTradingTime', title: "拉黑时间", excel_width:15, searchList:{type:'input',event:'date',operate: 'RANGE'}, minWidth: 140}
                 ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#actionbar', width:200}
             ]]
             ,page: {
@@ -448,37 +440,25 @@
                 idsArr.push(value.id);
             });
             switch(obj.event) {
-                case 'addBlack':
+                case 'addBlackMember':
+                    layer_index1 = we.api.open("{:url('admin/user.user/addBlackMember')}",'新增会员',{zIndex:19891016
+                    },['80%' , '80%']);
+                    break;
+                case 'importBlackMember':
+                    we.api.open("{:url('admin/user.user/import','',false)}",'导入会员信息');
+                    break;
+                case 'delete':
                     if(data != "") {
-                        layer.confirm('请确定是否加入黑名单？',{
+                        layer.confirm('请确定是否删除？',{
+                            skin: 'layui-layer-we',
                             title:'温馨提示',
                         }, function(index){
-                            //对接后台拉黑接口
-                            we.api.ajax({"url":"","data":{'ids':idsArr.join(',')},'tableid':"tableReload",'action':'del'});
+                            we.api.ajax({"url":"","data":{'ids':idsArr.join(',')},'tableid':'tableReload','action':'del'});
                             layer.close(index);
                         });
                     } else {
                         toastr.warning('没有选择数据');
                     }
-                    break;
-                case 'sendSearchResultSms':
-                    if(data != "") {
-                        $(".phone-list").html('');//每次初始化置0
-                        $.each(data,function (index, value) {
-                            $(".phone-list").append('<li><span>1374654564</span><i class="fa fa-times paddingleft10 iconEvent" aria-hidden="true"></i></li>');
-                        });
-                        layer_index = we.api.open_current_page_layer($(".selectMemberToSendSms"),'选则订单发送',{zIndex:19891016
-                        },['80%' , '80%']);
-                    }else{
-                        toastr.warning('没有选择数据');
-                    }
-                    break;
-                case 'addMember':
-                    layer_index1 = we.api.open("{:url('admin/user.user/edit')}",'新增会员',{zIndex:19891016
-                    },['80%' , '80%']);
-                    break;
-                case 'importMemberInfo':
-                    we.api.open("{:url('admin/user.user/import','',false)}",'导入会员信息');
                     break;
             }
         })
